--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 <div class="card__back">
-	<p class="aboute_content"> I am at the beginning of my journey and strive to be part of a friendly and professional team where I could develop and be useful, participating in interesting projects.</p>
+	<p class="aboute_content"> Made with ❤️</p>
    <ul class="card__content-list-social">
       <li class="card__content-social">
         <a class="instagram" href="https://www.instagram.com/oldmadwoman/">
